@startuml eternal 

class Program {
    + Main(): void
}

class Menu {
    + DisplayMenu(): void
    + GetUserChoice(): int
}

class Goal {
    # _name: string
    # _description: string
    # _points: int
    + Goal(name: string, description: string, points: int)
    + RecordEvent(): int
    + IsComplete(): bool
    + GoalStatus(): string
}

class SimpleGoal {
    - _completed: bool
    + SimpleGoal(name: string, description: string, points: int)
    + RecordEvent(): int
    + IsComplete(): bool
    + GoalStatus(): string
}

class EternalGoal {
    + EternalGoal(name: string, description: string, points: int)
    + RecordEvent(): int
    + IsComplete(): bool
    + GoalStatus(): string
}

class ChecklistGoal {
    - _timesCompleted: int
    - _targetCount: int
    + ChecklistGoal(name: string, description: string, points: int, targetCount: int, bonusPoints: int)
    - _bonusPoints: int
    + RecordEvent(): int
    + IsComplete(): bool
    + GoalStatus(): string
}

class GoalManager {
    - _goals: List<Goal>
    - _totalPoints: int
    + GoalManager()
    + CreateNewGoal(): void
    + ListGoals(): void
    + SaveGoals(filename: string): void
    + LoadGoals(filename: string): void
    + RecordEvent(goalIndex: int): void
    + GetTotalPoints(): int
}

Program --> Menu
Menu --> GoalManager
Goal <|-- SimpleGoal
Goal <|-- EternalGoal
Goal <|-- ChecklistGoal
GoalManager --> Goal

Goal : +RecordEvent(): int
Goal : +IsComplete(): bool
Goal : +GoalStatus(): string

SimpleGoal : +RecordEvent(): int (override)
SimpleGoal : +IsComplete(): bool (override)
SimpleGoal : +GoalStatus(): string (override)

EternalGoal : +RecordEvent(): int (override)
EternalGoal : +IsComplete(): bool (override)
EternalGoal : +GoalStatus(): string (override)

ChecklistGoal : +RecordEvent(): int (override)
ChecklistGoal : +IsComplete(): bool (override)
ChecklistGoal : +GoalStatus(): string (override)

' Just so you're aware, I did ask chat gpt to tell me the syntax
' for overriding methods in plantuml because I couldn't find anything otherwise

@enduml